exclude example dir

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": "@wiisportsresorts/eslint-config",
-  "ignorePatterns": ["dist/**"],
+  "ignorePatterns": ["dist/**", "example/**"],
   "rules": {
     "generator-star-spacing": "off",
     "space-before-function-paren": "off",
